# games-for-grandpa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  BUILD_GUIDE.md  DSA_GUIDE.md  RELEASE.md  ROADMAP.md  TESTING.md
scripts/: build.ps1  capture_screenshots.py
src/games_for_grandpa/: __init__.py  __main__.py  app.py  audio.py  core.py  persistence.py  scenes.py  theme.py  ui.py
src/games_for_grandpa/assets/: __init__.py
src/games_for_grandpa/games/: __init__.py  connect_four.py  connect_four_scene.py  duck_hunt.py  duck_hunt_scene.py  fishing_game.py  fishing_game_scene.py  jigsaw_puzzle.py  jigsaw_puzzle_scene.py  maze_chase.py  maze_chase_scene.py  memory_cards.py  memory_cards_scene.py  paddle_rally.py  paddle_rally_scene.py  space_defense.py  space_defense_scene.py  target_practice.py  target_practice_scene.py  target_tap.py  target_tap_scene.py  three_in_row.py  three_in_row_scene.py  whack_a_mole.py  whack_a_mole_scene.py
tests/: test_connect_four.py  test_core.py  test_duck_hunt.py  test_duck_hunt_scene.py  test_fishing_game.py  test_jigsaw_puzzle.py  test_maze_chase.py  test_memory_cards.py  test_navigation.py  test_paddle_rally.py  test_persistence.py  test_space_defense.py  test_target_practice.py  test_target_tap.py  test_three_in_row.py  test_ui.py  test_whack_a_mole.py
