[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "games-for-grandpa"
version = "0.3.1"
description = "Accessible mouse-only games that demonstrate Python, OOP, and core algorithms."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Chinzillla" }]
dependencies = [
    "pygame-ce==2.5.5",
]

[project.scripts]
games-for-grandpa = "games_for_grandpa.app:main"

[dependency-groups]
dev = [
    "pyinstaller==6.12.0",
    "pytest==8.3.5",
    "ruff==0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/games_for_grandpa"]

[tool.hatch.build.targets.wheel.force-include]
"src/games_for_grandpa/assets/duck.png" = "games_for_grandpa/assets/duck.png"
"src/games_for_grandpa/assets/duck_hit.png" = "games_for_grandpa/assets/duck_hit.png"
"src/games_for_grandpa/assets/first_person_shotgun.png" = "games_for_grandpa/assets/first_person_shotgun.png"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
